--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -14,18 +14,18 @@
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Shopping Cart"
+        android:title="Cart"
         android:icon="@drawable/icon_cart"/>
 
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Purchase History"
+        android:title="History"
         android:icon="@drawable/icon_his"/>
 
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Account Settings"
+        android:title="Settings"
         android:icon="@drawable/icon_acc"/>
 </menu>
