--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -36,9 +36,9 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="139dp"
+        android:layout_height="216dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="30dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -87,6 +87,29 @@
                 android:inputType="text" />
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Confirm: " />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/editTextText3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text" />
+        </TableRow>
+
     </TableLayout>
 
     <Button
@@ -96,7 +119,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:backgroundTint="#000000"
-        android:text="LOGIN" />
+        android:text="SIGN UP" />
 
     <Button
         android:id="@+id/button4"
@@ -123,7 +146,7 @@
             android:layout_marginLeft="70dp"
             android:layout_weight="1"
             android:fontFamily="sans-serif"
-            android:text="Don't have an account?" />
+            android:text="Already have an account?" />
 
         <Button
             android:id="@+id/button5"
@@ -132,7 +155,7 @@
             android:layout_marginRight="80dp"
             android:layout_weight="1"
             android:backgroundTint="#000000"
-            android:text="SIGN UP"
+            android:text="LOGIN"
             android:textColor="#FFFFFF" />
     </LinearLayout>
 </LinearLayout>
