done UI account

--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:fontFamily="cursive"
-        android:text="Capeli"
+        android:text="Capelli"
         android:textAllCaps="false"
         android:textSize="80dp"
         android:textStyle="bold" />
