--- a/app/src/main/res/layout/lookbook_page_long.xml
+++ b/app/src/main/res/layout/lookbook_page_long.xml
@@ -2,12 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/lookbook_long">
-    </ImageView>
+
 
 
 
