--- a/app/src/main/res/layout/lookbook_page.xml
+++ b/app/src/main/res/layout/lookbook_page.xml
@@ -42,7 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Short Hairs"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/lookbook_btn_short">
     </Button>
 
     <androidx.cardview.widget.CardView
@@ -64,7 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Long Hairs"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/lookbook_btn_long">
     </Button>
 
     <androidx.cardview.widget.CardView
@@ -86,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Colors"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:id="@+id/lookbook_btn_color">
     </Button>
 </LinearLayout>
