--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -125,7 +125,8 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:menu="@menu/menu_bottom_nav">
+            app:menu="@menu/menu_bottom_nav"
+            android:id="@+id/bottom_nav">
         </com.google.android.material.bottomnavigation.BottomNavigationView>
     </RelativeLayout>
 </LinearLayout>
