--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -28,7 +28,6 @@
         android:textSize="40dp" />
 
     <TextView
-        android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -45,7 +44,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email:" />
@@ -56,12 +54,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/editTextText6"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_email"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Enter your email"/>
         </TableRow>
 
         <TableRow
@@ -69,7 +68,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password:" />
@@ -79,18 +77,19 @@
             android:layout_width="310dp"
             android:layout_height="12dp">
 
-            <EditText
-                android:id="@+id/editTextText11"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_password"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Enter your password"/>
         </TableRow>
 
     </TableLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_login"
         android:layout_width="324dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -99,7 +98,7 @@
         android:text="LOGIN" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_forgot"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -126,7 +125,7 @@
             android:text="Don't have an account?" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btn_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="80dp"
