--- a/app/src/main/res/layout/lookbook_page_long.xml
+++ b/app/src/main/res/layout/lookbook_page_long.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
 
     <ImageSwitcher
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        android:id="@+id/lookbook_long_switcher">
+        android:id="@+id/lookbook_long_switcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
     </ImageSwitcher>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
         app:layout_constraintBottom_toTopOf="@id/lookbook_long_switcher">
+
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="0dp"
             android:id="@+id/previous"
-            android:layout_marginLeft="10dp">
-        </Button>
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="0dp"
-            android:id="@+id/next"
-            android:layout_marginRight="10dp">
+            android:layout_gravity="left"
+            android:text="Previous">
+
         </Button>
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Next">
+
+        </Button>
+
+
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
