--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:fontFamily="cursive"
-        android:text="Capeli"
+        android:text="Capelli"
         android:textAllCaps="false"
         android:textSize="80dp"
         android:textStyle="bold" />
@@ -28,7 +28,6 @@
         android:textSize="40dp" />
 
     <TextView
-        android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -45,7 +44,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email:" />
@@ -56,12 +54,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/editTextText6"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_email"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Enter your email"/>
         </TableRow>
 
         <TableRow
@@ -69,7 +68,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password:" />
@@ -79,12 +77,13 @@
             android:layout_width="310dp"
             android:layout_height="12dp">
 
-            <EditText
-                android:id="@+id/editTextText11"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_password"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Enter your password"/>
         </TableRow>
 
         <TableRow
@@ -92,7 +91,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Confirm: " />
@@ -102,18 +100,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/editTextText3"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_confirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Confirm your password"/>
         </TableRow>
 
     </TableLayout>
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+    </ProgressBar>
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_register"
         android:layout_width="324dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -122,7 +129,7 @@
         android:text="SIGN UP" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_forgot"
         android:layout_width="201dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -140,7 +147,6 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
@@ -149,7 +155,7 @@
             android:text="Already have an account?" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/change_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="80dp"
