--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,28 +2,33 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Home"
         android:icon="@drawable/icon_home"/>
     <item
+        android:id="@+id/action_noti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Notifications"
         android:icon="@drawable/icon_noti"/>
     <item
+        android:id="@+id/action_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Cart"
         android:icon="@drawable/icon_cart"/>
 
     <item
+        android:id="@+id/action_his"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="History"
         android:icon="@drawable/icon_his"/>
 
     <item
+        android:id="@+id/action_acc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Settings"
