--- a/app/src/main/res/layout/booking_sel_locate.xml
+++ b/app/src/main/res/layout/booking_sel_locate.xml
@@ -12,6 +12,7 @@
         android:layout_height="167dp">
 
         <ImageView
+            android:id="@+id/iv_capeli_backgroundd"
             android:layout_width="match_parent"
             android:layout_height="167dp"
             android:layout_alignParentTop="true"
@@ -22,6 +23,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/iv_capeli"
             android:layout_width="165dp"
             android:layout_height="122dp"
             android:layout_alignParentTop="true"
@@ -37,6 +39,7 @@
         </ImageView>
 
         <TextView
+            android:id="@+id/tv_capeli_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -52,6 +55,7 @@
             android:textStyle="bold"></TextView>
 
         <TextView
+            android:id="@+id/tv_salon"
             android:layout_width="93dp"
             android:layout_height="48dp"
             android:layout_alignParentEnd="true"
@@ -67,20 +71,23 @@
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/tv_selectLocale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="20dp"
         android:text="->Select service location:"
         android:textAllCaps="false"
-        android:layout_marginStart="16dp"
         android:textStyle="bold"></TextView>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="26dp">
-        <ImageView
+
+        <ImageButton
+            android:id="@+id/ibutton_next"
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
@@ -89,7 +96,7 @@
             android:layout_marginLeft="376dp"
             android:layout_marginEnd="9dp"
             android:layout_marginRight="9dp"
-            android:src="@drawable/icon_vectorright"/>
+            android:src="@drawable/icon_vectorright" />
 
     </RelativeLayout>
     <ScrollView
@@ -106,7 +113,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/iv_capeli_locale1"
                     android:layout_width="81dp"
                     android:layout_height="81dp"
                     android:layout_alignParentStart="true"
@@ -121,6 +128,7 @@
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <TextView
+                    android:id="@+id/tv_name_locale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -131,9 +139,10 @@
                     android:layout_marginEnd="195dp"
                     android:layout_marginRight="195dp"
                     android:text="Name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_address_locale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
@@ -144,7 +153,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="Address : Walnet St."
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -298,10 +307,10 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bnv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:menu="@menu/menu_bottom_nav">
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+            app:menu="@menu/menu_bottom_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
     </RelativeLayout>
 
 </LinearLayout>
