--- a/app/src/main/res/layout/booking_confirm.xml
+++ b/app/src/main/res/layout/booking_confirm.xml
@@ -82,6 +82,7 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btn_book_now"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -91,7 +92,7 @@
             android:layout_marginLeft="112dp"
             android:layout_marginBottom="4dp"
             android:backgroundTint="#000000"
-            android:text="BOOK NOW!"/>
+            android:text="BOOK NOW!" />
     </RelativeLayout>
 
     <RelativeLayout
