--- a/app/src/main/res/layout/booking_sel_staff.xml
+++ b/app/src/main/res/layout/booking_sel_staff.xml
@@ -94,7 +94,8 @@
             android:layout_marginRight="385dp"
             android:src="@drawable/icon_vectorleft"/>
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/ibutton_staff_next"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
@@ -105,7 +106,7 @@
             android:layout_marginLeft="376dp"
             android:layout_marginEnd="9dp"
             android:layout_marginRight="9dp"
-            android:src="@drawable/icon_vectorright"/>
+            android:src="@drawable/icon_vectorright" />
 
     </RelativeLayout>
     <ScrollView
@@ -122,7 +123,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/iv_capeli_locale1"
                     android:layout_width="81dp"
                     android:layout_height="81dp"
                     android:layout_alignParentStart="true"
