--- a/app/src/main/res/layout/booking_sel_locate.xml
+++ b/app/src/main/res/layout/booking_sel_locate.xml
@@ -92,10 +92,10 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="376dp"
-            android:layout_marginLeft="376dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginRight="9dp"
+            android:layout_marginStart="-3dp"
+            android:layout_marginLeft="-3dp"
+            android:layout_marginEnd="388dp"
+            android:layout_marginRight="388dp"
             android:src="@drawable/icon_back" />
 
     </RelativeLayout>
@@ -313,7 +313,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnv"
+            android:id="@+id/bnv_locate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/menu_bottom_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
