--- a/app/src/main/res/layout/booking_sel_schedule.xml
+++ b/app/src/main/res/layout/booking_sel_schedule.xml
@@ -79,7 +79,8 @@
         android:layout_width="match_parent"
         android:layout_height="29dp">
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/back_schedule"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
@@ -90,21 +91,9 @@
             android:layout_marginLeft="5dp"
             android:layout_marginEnd="385dp"
             android:layout_marginRight="385dp"
-            android:src="@drawable/icon_vectorleft"/>
+            android:src="@drawable/icon_back"/>
 
-        <ImageButton
-            android:id="@+id/ibutton_schedule_next"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="376dp"
-            android:layout_marginLeft="376dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginRight="9dp"
-            android:src="@drawable/icon_vectorright" />
+
 
     </RelativeLayout>
     <ScrollView
@@ -117,6 +106,7 @@
             android:background="#4D000000"
             android:orientation="vertical">
             <RelativeLayout
+                android:id="@+id/schedule_0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -152,6 +142,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/schedule_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -186,6 +177,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/schedule_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -220,6 +212,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/schedule_3"
                 android:layout_width="match_parent"
                 android:layout_height="110dp">
 
@@ -262,6 +255,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bnv_schedule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/menu_bottom_nav">
