--- a/app/src/main/res/layout/booking_confirm.xml
+++ b/app/src/main/res/layout/booking_confirm.xml
@@ -101,6 +101,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bnv_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/menu_bottom_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
