--- a/app/src/main/res/layout/payment_2_page.xml
+++ b/app/src/main/res/layout/payment_2_page.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/back_payment_2"
         android:layout_width="36dp"
         android:layout_height="38dp"
         android:backgroundTint="#FFFFFF"
@@ -23,7 +23,7 @@
         android:textStyle="bold" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBox_cod"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
@@ -31,7 +31,7 @@
         android:text="Cash on delievery(COD)" />
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/checkBox_momo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
@@ -45,7 +45,7 @@
         tools:srcCompat="@drawable/momo_icon" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_confirm_cash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
