--- a/app/src/main/res/layout/payment_1_page.xml
+++ b/app/src/main/res/layout/payment_1_page.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/back_payment_1"
         android:layout_width="36dp"
         android:layout_height="38dp"
         android:backgroundTint="#FFFFFF"
@@ -128,7 +128,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
