--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -31,6 +31,6 @@
         android:id="@+id/action_acc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Settings"
+        android:title="Profile"
         android:icon="@drawable/icon_acc"/>
 </menu>
