--- a/app/src/main/res/layout/product_description_page.xml
+++ b/app/src/main/res/layout/product_description_page.xml
@@ -103,7 +103,7 @@
             android:src="@drawable/shopping_chat_icon_img1" />
 
         <ImageButton
-            android:id="@+id/imageButton9"
+            android:id="@+id/img_btn_addcart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
