--- a/app/src/main/res/layout/booking_sel_staff.xml
+++ b/app/src/main/res/layout/booking_sel_staff.xml
@@ -108,10 +108,12 @@
             android:layout_height="394dp"
             android:background="#4D000000"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:id="@+id/staff_0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF">
 
                 <ImageView
                     android:id="@+id/iv_capeli_locale1"
@@ -140,7 +142,7 @@
                     android:layout_marginEnd="160dp"
                     android:layout_marginRight="160dp"
                     android:text="Staff name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_pnumber_0"
@@ -154,13 +156,14 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="phone: 0987654321"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/staff_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF">
 
                 <TextView
                     android:id="@+id/tv_staff_1"
@@ -174,7 +177,7 @@
                     android:layout_marginEnd="160dp"
                     android:layout_marginRight="160dp"
                     android:text="Staff name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_pnumber_1"
@@ -188,7 +191,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="phone: 0987654321"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -209,7 +212,8 @@
             <RelativeLayout
                 android:id="@+id/staff_2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF">
 
                 <TextView
                     android:id="@+id/tv_staff_2"
@@ -223,7 +227,7 @@
                     android:layout_marginEnd="160dp"
                     android:layout_marginRight="160dp"
                     android:text="Staff name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_pnumber_2"
@@ -237,7 +241,7 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="phone: 0987654321"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
 
                 <ImageView
@@ -259,7 +263,8 @@
             <RelativeLayout
                 android:id="@+id/staff_3"
                 android:layout_width="match_parent"
-                android:layout_height="110dp">
+                android:layout_height="110dp"
+                android:background="#FFFFFF">
 
                 <TextView
                     android:id="@+id/tv_staff_3"
@@ -273,7 +278,7 @@
                     android:layout_marginEnd="160dp"
                     android:layout_marginRight="160dp"
                     android:text="Staff name: San rose"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_pnumber_3"
@@ -287,20 +292,20 @@
                     android:layout_marginEnd="166dp"
                     android:layout_marginRight="166dp"
                     android:text="phone: 0987654321"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="81dp"
                     android:layout_height="81dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/icon_person" />
             </RelativeLayout>
