--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="397dp"
-        android:layout_height="363dp">
+        android:layout_width="match_parent"
+        android:layout_height="351dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
